# skinchanger

./: CHANGELOG.md  CMakeLists-Standalone.txt  CMakeLists-Universal.txt  CMakeLists.txt  LAUNCHER_SETUP.md  QUICK-START.md  README-STANDALONE.md  README-UNIVERSAL.md  README.md  SETUP.md  build-all.bat  build-all.sh  build-standalone-universal.bat  build-standalone.bat  build-standalone.sh  build.bat  run-standalone.bat  run-standalone.sh  setup-environment.bat
launcher/: CMakeLists.txt  README.md  USAGE.md  build.bat  run_launcher.bat  run_launcher.cmd
launcher/src/: downloader.cpp  downloader.h  main.cpp  project_builder.cpp  project_builder.h  requirements_checker.cpp  requirements_checker.h
src/: main-standalone.cpp  main.cpp
src/anticheat/: anticheat.cpp  anticheat.h
src/app/: application.cpp  application.h
src/config/: config.cpp  config.h
src/game/: game_integration.cpp  game_integration.h
src/hooking/: directx_hook.cpp  directx_hook.h
src/injection/: injection_engine.cpp  injection_engine.h
src/inventory/: inventory_manager.cpp  inventory_manager.h
src/launcher/: launcher.cpp  launcher.h
src/manager/: skinchanger_manager.cpp  skinchanger_manager.h
src/memory/: memory.cpp  memory.h  pattern_scanner.cpp  pattern_scanner.h
src/overlay/: overlay.cpp  overlay.h
src/skinchanger/: skin_database.cpp  skin_database.h  skinchanger.cpp  skinchanger.h
src/ui/: console.cpp  console.h
src/utils/: float_calculator.cpp  float_calculator.h
